@@ -1,3 +1,9 @@
+libdbi-drivers (0.8.2-5.syslogng30) syslogng30; urgency=low
+
+  * Allow multiple instances of the FreeTDS backend.
+
+ -- ZorpOS Maintainers <zorpos@balabit.com>  Tue, 05 Aug 2008 11:09:18 +0200
+
 libdbi-drivers (0.8.2-4.syslogng30) syslogng30; urgency=low
 
   * Added support for setting MSSQL port number in the freetds driver.
